...
                                text = inputText.ifEmpty { stringResource(R.string.keyboard_select_letters) },
                                style = MaterialTheme.typography.headlineMedium.copy(
                                    fontSize = inputTextSize,
                                    fontWeight = FontWeight.Bold,
                                    color = if (inputText.isEmpty()) Color.Gray else Color.White
                                ),
                                modifier = Modifier.padding(start = 24.dp).testTag("keyboard_input_text")
                            )
                        } else {
                            TextField(
                                value = inputText,
                                onValueChange = onTextChange,
                                placeholder = {
...
